# Photobooth-software

./: .editorconfig  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  ASSUMPTIONS.md  Check-Runtime.cmd  Launch-Photobooth-Native-9x16.cmd  PROJECT_MEMORY.md  README.md  README.txt  Repair-And-Test-digiCamControl.cmd  Start-Photobooth-9x16.cmd  Start-Photobooth-Native.cmd  package-manifest.json  package.json  tsconfig.base.json  turbo.json
.project_memory/archives/: ARCHIVE_INDEX.md
.project_memory/chat_logs/: CHAT_LOG.md
app/: Photobooth.BoothNative.Portrait916.deps.json  Photobooth.BoothNative.deps.json
apps/admin-web/: .env.example  next-env.d.ts  next.config.mjs  package.json  postcss.config.mjs  tsconfig.json
apps/api/: package.json  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
apps/booth-desktop/: .env.example  components.json  index.html  package.json  tsconfig.json  vite.config.ts
apps/booth-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/booth-desktop/src-tauri/src/: main.rs
apps/booth-windows-native-portrait-916/: BeautyProcessor.cs  BoothDataService.cs  CompositeRenderer.cs  EffectManager.cs  FrameOverlayManager.cs  FullscreenPreviewWindow.xaml  FullscreenPreviewWindow.xaml.cs  Localization.cs  MainWindow.xaml  MainWindow.xaml.cs  Models.cs  PrintService.cs  TemplateManager.cs  WebsiteUploadService.cs  (+1 more)
docs/: NATIVE-WINDOWS-BOOTH.md  TEMPLATES.md
final/: Launch-Photobooth-Native.cmd  README-FIRST.txt  Repair-And-Test-digiCamControl.cmd
scripts/: package-booth.ps1  seed-local.mjs  setup-windows-tethered.ps1
(+76 files in other folders)
