[package]
name = "photobooth-booth-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0" }

[dependencies]
tauri = { version = "2.2.5", features = [] }
tauri-plugin-dialog = "2.2.1"
tauri-plugin-fs = "2.2.0"
tauri-plugin-opener = "2.2.0"
tauri-plugin-shell = "2.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
